Fix overflow issues

--- a/_pages/ed25519.md
+++ b/_pages/ed25519.md
@@ -6,4 +6,6 @@ permalink: /ed25519/
 
 # Môj ED25519 verejný kľúč
 
+```plaintext
 ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIE7aJPBkQVNRAq3wWfqlwDs+g1n1urXSydtIn+2zFUhY Tomas Hanecak <tomas.hanecak@icloud.com>
+```
